--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "alaska-sms",
-  "version": "0.9.2",
+  "version": "0.10.0",
   "description": "Alaska sms service",
   "keywords": [
     "alaska",
     "alaska-service"
   ],
-  "main": "lib/alaska-sms.js",
+  "main": "index.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./lib",
-    "watch": "babel ./src --out-dir ./lib -w",
-    "prebuild": "rimraf lib",
+    "build": "babel ./src --out-dir ./",
+    "watch": "babel ./src --out-dir ./ -w",
+    "prebuild": "rimraf lib api controllers config locales middlewares models sleds views",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -31,6 +31,6 @@
     "alaska": "*"
   },
   "dependencies": {
-    "alaska-sms-test": "^0.1.0"
+    "alaska-sms-test": "^0.10.0"
   }
 }
